--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Contact details</h2>
-                    <p class="p-heading">For any type of online project please don't hesitate to get in touch with me. The fastest way is to send me your message using the following email <a class="blue no-line" href="https://mail.google.com/mail/u/0/#inbox" target="_blank">hashimkakkaden@gmail.com</a></p>
+                    <p class="p-heading">For any type of online project please don't hesitate to get in touch with me. The fastest way is to send me your message using the following email <a class="blue no-line" href="https://mail.google.com/mail/u/0/#inbox" target="_blank">justingeorge0407@gmail.com</a></p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
